Fix spacing of h3 elements, change font for Github links on projects page

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,16 @@ Color Palette
 background color: #201e1a
 text color: #888783
 highlight color: #877046
-bright highlight color: #fdd06b*/
+bright highlight color: #fdd06b
+
+Fonts from Google
+Josephine Sans
+Bebas Nueue
+
+
+*/
+
+
 
 /* General Styles-----------------------------------------------------------*/
 
@@ -40,12 +49,10 @@ body {
     box-shadow: 0px 0px 5px;
 }
 
+
 h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+h3 {
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 h1 {
@@ -57,8 +64,11 @@ h1 {
 
 h2 {
     font-size: 2.5em;
-    font-family: 'Bebas Neue', sans-serif;
-    font-family: 'Bebas Neue', sans-serif;
+
+}
+
+h3 {
+    letter-spacing: 0.2em;
 }
 
 /* Navbar and links */
@@ -181,6 +191,7 @@ tr.odd {
 }
 
 .project-github-link a {
+    font-family: 'Josefin Sans', sans-serif;
     color: #877046;
 }
 
